# ExoCcycle

./: Bathymetry.py  CcycleAnalysis.py  README.md  __init__.py  environment.yml  functionClassBuilding.py  pyproject.toml  utils.py
ExoCcycle/: Bathymetry.py  __init__.py  functionClassBuilding.py  plotHelper.py  utils.py
JN/: BasinConnectivityMethods.ipynb  CommunityDetectionResolutionTest.ipynb  Comparison_Community_detection.ipynb  CreateBathymetryFromBody.ipynb  CreateBathymetryFromEarthRecon-RK2021.ipynb  CreateBathymetryFromEarthRecon.ipynb  CreateBathymetryFromSynth.ipynb  DefineBathymetryBasins.ipynb  DefineBathymetryCommunities.ipynb  DefineGLORYS12V1Basins.ipynb  Development.ipynb  GMD_Manuscript_Figures.ipynb  Implementation_of_community_detection_methods.ipynb  Modularity-Inbetweenness-visualization.ipynb  OceanBasinsEvolution.ipynb  PlotBathymetryPNASBogumil_etal_2024.ipynb  StartUpJN.ipynb  Untitled.ipynb
docs/source/: conf.py  index.rst
