[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[project]
name = "ExoCcycle"
version = "0.1.0"
description = "ExoCcycle: tools for basin detection and carbon-cycle modeling"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ExoCcycle authors", email = "bogumilcodes@gmail.edu" }]
requires-python = ">=3.9"

# --- Runtime dependencies (imports in your code) ---
dependencies = [
  # core numerics
  "numpy>=1.26",
  "scipy>=1.10",
  "pandas>=2.0",

  # IO / grids
  "netCDF4>=1.6",
  "cftime>=1.6",

  # plotting
  "matplotlib>=3.8",
  "plotly>=5.0",
  "tqdm>=4.66",

  # geospatial stack used by cartopy
  "cartopy>=0.23",
  "shapely>=2.0",
  "pyproj>=3.6",
  "pyshp>=2.3",

  # networks / community detection / clustering
  "networkx>=3.0",
  "python-igraph>=0.11",
  "leidenalg>=0.10",
  "python-louvain>=0.16",
  "cdlib>=0.4",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
# docs: keep as you had it; works with Sphinx 8
docs = [
  "sphinx>=7",
  "myst-parser>=2.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-autodoc-typehints>=2.0",
  "sphinx-rtd-theme>=2.0",
]
dev = [
  "pytest>=7",
  "ruff>=0.4",
  "mypy>=1.6",
]

[project.urls]
Homepage = "https://github.com/your-org/ExoCcycle"
Documentation = "https://your-docs-site"
Issues = "https://github.com/your-org/ExoCcycle/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "docs", "examples"]

[tool.setuptools.package-data]
"ExoCcycle" = ["data/*"]

